--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="main.css">
+  <script src="main.js"></script>
   <style>
     body{
     font-family: 'Barlow Semi Condensed', sans-serif;
@@ -17,9 +18,41 @@
   <title>Frontend Mentor | Rock, Paper, Scissors</title>
 </head>
 <body>
-
-
+<!-- header -->
+  <div class="header">
+    <div class="title">
+      <img src="./images/logo.svg" alt="" srcset="" >
+    </div>
+    <div class="score">
+      <span>score</span>
+      <span class="score">00</span>
+    </div>
+  </div>
+<!-- main part -->
+<div class="game">
+  <img src="./images/bg-triangle.svg" alt="" srcset="" class="mainpic">
+  <div class="paper">
+    <img src="./images/icon-paper.svg" alt="" srcset="">
+  </div>
+  <div class="rock">
+    <img src="./images/icon-rock.svg" alt="" srcset="">
+  </div>
+  <div class="scissors">
+    <img src="./images/icon-scissors.svg" alt="" srcset="">
+  </div>
   
+</div>
+
+  <!-- footer -->
+  
+  <div class="rules" >
+    <span>rules</span>
+    <img src="./images/icon-close.svg" alt="" srcset="" class="closepic" onclick="closerules()">
+    <img src="./images/image-rules.svg" alt="" srcset="" class="rulespic">
+  </div>
+  <div class="rulesbutton" onclick="open_rules()">
+    <span>rules</span>
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Zaid Katbeh</a>.
