finished the disktop version

--- a/index.html
+++ b/index.html
@@ -9,40 +9,30 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="main.css">
-  <script src="main.js"></script>
+  <link rel="stylesheet" href="media.css">
   <style>
     body{
-    font-family: 'Barlow Semi Condensed', sans-serif;
+      font-family: 'Barlow Semi Condensed', sans-serif;
     }
-</style>
+    </style>
   <title>Frontend Mentor | Rock, Paper, Scissors</title>
 </head>
 <body>
-<!-- header -->
+  <!-- header -->
   <div class="header">
     <div class="title">
       <img src="./images/logo.svg" alt="" srcset="" >
     </div>
     <div class="score">
       <span>score</span>
-      <span class="score">00</span>
+      <span class="scoreres"></span>
     </div>
   </div>
-<!-- main part -->
-<div class="game">
-  <img src="./images/bg-triangle.svg" alt="" srcset="" class="mainpic">
-  <div class="paper">
-    <img src="./images/icon-paper.svg" alt="" srcset="">
-  </div>
-  <div class="rock">
-    <img src="./images/icon-rock.svg" alt="" srcset="">
-  </div>
-  <div class="scissors">
-    <img src="./images/icon-scissors.svg" alt="" srcset="">
+  <!-- main part -->
+  <div class="game">
+  
   </div>
   
-</div>
-
   <!-- footer -->
   
   <div class="rules" >
@@ -57,5 +47,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Zaid Katbeh</a>.
   </div>
+  
+  <script src="main.js"></script>
 </body>
 </html>
